ADD_SUBDIRECTORY("ofcinterface")
ADD_SUBDIRECTORY("ofeditstate")
ADD_SUBDIRECTORY("ofjitter")
ADD_SUBDIRECTORY("oflighting")
ADD_SUBDIRECTORY("ofpointclouds")
ADD_SUBDIRECTORY("ofrealtimeupdate")
ADD_SUBDIRECTORY("ofsplitwindow")
ADD_SUBDIRECTORY("oftrajectoryfollower")
ADD_SUBDIRECTORY("ofviewer")
ADD_SUBDIRECTORY("ofwxwidgets")
IF(OF_USE_QT)
  ADD_SUBDIRECTORY("ofcontrols")
  ADD_SUBDIRECTORY("ofqt")
ENDIF()
