ADD_SUBDIRECTORY("ofcinterface")
ADD_SUBDIRECTORY("ofjitter")
ADD_SUBDIRECTORY("ofpointclouds")
ADD_SUBDIRECTORY("ofrealtimeupdate")
ADD_SUBDIRECTORY("ofsplitwindow")
ADD_SUBDIRECTORY("oftrajectoryfollower")
ADD_SUBDIRECTORY("ofviewer")
ADD_SUBDIRECTORY("ofwxwidgets")
ADD_SUBDIRECTORY("oflighting")
IF(Qt5_FOUND)
  ADD_SUBDIRECTORY("ofcontrols")
  ADD_SUBDIRECTORY("ofqt")
ENDIF()
