ADD_SUBDIRECTORY("ofcinterface")
ADD_SUBDIRECTORY("ofeditstate")
ADD_SUBDIRECTORY("ofjitter")
ADD_SUBDIRECTORY("oflighting")
ADD_SUBDIRECTORY("ofpointclouds")
ADD_SUBDIRECTORY("ofpointing")
ADD_SUBDIRECTORY("ofrealtimeupdate")
ADD_SUBDIRECTORY("ofshadow")
ADD_SUBDIRECTORY("ofsplitwindow")
ADD_SUBDIRECTORY("oftrajectoryfollower")
ADD_SUBDIRECTORY("ofviewer")
ADD_SUBDIRECTORY("ofwxwidgets")
IF(Qt5_FOUND)
  ADD_SUBDIRECTORY("ofcontrols")
  ADD_SUBDIRECTORY("ofqt")
ENDIF()
ADD_SUBDIRECTORY("ofsilverlining")
