IF(OF_PYTHON_MODULE)
	IF(WIN32)
	  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/of_test.py DESTINATION bin)
	  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ofqt_demo.py DESTINATION bin)
	  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/OpenFrames/PyQtOF.py DESTINATION bin/OpenFrames)
	ELSE()
	  IF(APPLE AND GMAT_MAC_APPBUNDLE_PATH)
		SET(INSTALL_DIR ${GMAT_MAC_APPBUNDLE_PATH}/Frameworks)
	  ELSE()
		# dump at bin, python modules need to execute from GmatBase for now
		SET(INSTALL_DIR bin/OpenFrames)
	  ENDIF()
	  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/of_test.py DESTINATION ${INSTALL_DIR})
	  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ofqt_demo.py DESTINATION ${INSTALL_DIR})
	  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/PyQtOF.py DESTINATION ${INSTALL_DIR}/OpenFrames)
	ENDIF()
ENDIF()
