IF(OF_PYTHON_MODULE)
  SET(INSTALL_DIR bin)
  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/of_cones.py DESTINATION ${INSTALL_DIR})
  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/of_test.py DESTINATION ${INSTALL_DIR})
  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ofqt_demo.py DESTINATION ${INSTALL_DIR})
  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ofqt_interfacec_demo.py DESTINATION ${INSTALL_DIR})
  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/OpenFrames/PyQtOF.py DESTINATION ${INSTALL_DIR}/OpenFrames)
  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/OpenFrames/PyQtOFInterfaceC.py DESTINATION ${INSTALL_DIR}/OpenFrames)
ENDIF()
